--- a/app/src/main/res/layout/activity_submit.xml
+++ b/app/src/main/res/layout/activity_submit.xml
@@ -7,8 +7,9 @@
     android:background="@color/darkblack"
     tools:context=".SubmitActivity">
 
-    
+
     <include
+        android:id="@+id/include"
         layout="@layout/submit_app_bar" />
 
     <TextView
@@ -22,6 +23,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/gold_line"
+        android:orientation="horizontal"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/project_text"></LinearLayout>
 
     <EditText
         android:id="@+id/first_name"
