--- a/app/src/main/res/layout/fragment_learner.xml
+++ b/app/src/main/res/layout/fragment_learner.xml
@@ -14,4 +14,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/learner_list_item" />
+    <ProgressBar
+        android:id="@+id/progressBarLearn"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintBottom_toBottomOf="@+id/learner_recyclerview"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/learner_recyclerview" />
 </androidx.constraintlayout.widget.ConstraintLayout>
