--- a/app/src/main/res/layout/skill_list_item.xml
+++ b/app/src/main/res/layout/skill_list_item.xml
@@ -7,6 +7,7 @@
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="5dp"
+    android:id="@+id/skill_card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
